z-index fix for icons within data table

--- a/ui/src/components/panic-dashboard-overview/panic-dashboard-overview.scss
+++ b/ui/src/components/panic-dashboard-overview/panic-dashboard-overview.scss
@@ -82,25 +82,27 @@ panic-dashboard-overview {
         display: flex;
         max-height: 258px;
 
-        svc-buttons-container {
+        svc-buttons-container{
             display: inline-flex;
-        }
 
-        svc-button {
-            ion-button {
-                width: 27px !important;
-                height: 27px !important;
-
-                &::part(native) {
-                    cursor: unset;
-                }
-
-                ion-icon {
-                    width: 27px;
-                    height: 27px;
+            ion-buttons {
+                z-index: 0 !important;
+    
+                ion-button {
+                    width: 27px !important;
+                    height: 27px !important;
+    
+                    &::part(native) {
+                        cursor: unset;
+                    }
+    
+                    ion-icon {
+                        width: 27px;
+                        height: 27px;
+                    }
                 }
             }
-        }
+        } 
     }
 
     svc-card {
